tests/errors/sem.type-mismatch.insert-arg.or
main :: () -> void {
    @insert 5;
};
